--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -22,18 +22,16 @@
     flex-basis: 30%;
 }
 .link-section ul li{
-    list-style: none;
+    color: #afafaf;
     margin: 5px;
 }
 .link-section ul li a{  
+    font-weight: bold;
     text-decoration: none;
     color: #afafaf;
 }
 .footer-section .follow-me-section{
     flex-basis: 30%;
-    display: flex;
-    justify-content: start;
-    flex-wrap: wrap;
 }
 .follow-me-section h2{
     flex-basis: 100%;
