final commit minor bugs

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -40,7 +40,7 @@
 }
 .contact-div table{
     flex-basis: 100%;
-    margin: 15px 20px;
+    margin: 5px auto;
 }
 .contact-div .social-icon-list{
     flex-basis: 100%;
