--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -125,6 +125,9 @@
     .home-container h3{
         font-size: 14px;
     }
+    .home-container h2{
+        font-size: 14px;
+    }
 }
 
 /* Tablet screens css*/
