--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -28,6 +28,7 @@
     font-family: "Roboto Condensed";
     margin: 25px auto;
     padding: 10px;
+    font-weight: bold;
 }
 
 /* project list div */
