--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Inter Tight');
+@import url('https://fonts.googleapis.com/css?family=Inter');
 @import url('https://fonts.googleapis.com/css?family=Caprasimo');
 .education-div {
     display: flex;
@@ -34,7 +34,7 @@
 
 .education-content h5 {
     color: #3d68f3;
-    font-family: "Inter Tight";
+    font-family: "Inter";
     font-weight: bold;
 }
 
@@ -43,7 +43,7 @@
 .education-content h6 {
     font-weight: bold;
     font-size: 16px;
-    font-family: "Inter Tight";
+    font-family: "Inter";
 }
 
 .education-content p {
