--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto Condensed');
+@import url('https://fonts.googleapis.com/css?family=Inter');
 @import url('https://fonts.googleapis.com/css?family=Caprasimo');
+
 /* home container */
 .home-container{
     margin: 0;
@@ -67,7 +68,7 @@
 /* home container text */
 .home-container h3{
     color: #3d68f3;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 30px;
