--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto Condensed');
+@import url('https://fonts.googleapis.com/css?family=Inter');
 @import url('https://fonts.googleapis.com/css?family=Caprasimo');
 
 .skill-section{
@@ -20,7 +20,7 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .skills-card h4 {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 15px auto;
     font-weight: bold;
 }
@@ -31,11 +31,11 @@
 .skills-card p{
     font-weight: bold;
     color: #676767;
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 25px auto;
 }
 .skills-card p span{
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 15px auto;
     font-weight: bold;
     color: black;
